--- a/windows/requirements.txt
+++ b/windows/requirements.txt
@@ -1,10 +1,11 @@
 absl-py==1.2.0
 addict==2.4.0
-aiohttp==3.7.4.post0
+aiohttp==3.8.1
+aiosignal==1.2.0
 appdirs==1.4.4
 args==0.1.0
 async-generator==1.10
-async-timeout==3.0.1
+async-timeout==4.0.2
 attrs==21.4.0
 autopep8==1.6.0
 basicsr==1.4.1
@@ -37,6 +38,7 @@ Flask-Bcrypt==1.0.1
 Flask-Login==0.6.1
 Flask-SQLAlchemy==2.5.1
 fonttools==4.34.4
+frozenlist==1.3.1
 future==0.18.2
 google-api-core==2.8.2
 google-auth==2.9.1
